[tool.poetry]
name = "Flandre"
version = "0.3.1"
description = "Flandre"
authors = ["KoishiStudio@Github"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.6"

[nonebot.plugins]
plugins = ["nonebot_plugin_help"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
