[tool.poetry]
name = "Flandre"
version = "0.5.4"
description = "基于nonebot2的机器人"
authors = ["KoishiMoe <68314080+KoishiStudio@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "2.0.0b3"
nonebot-adapter-onebot = "2.0.0.b1"
aiohttp = ">=3.7.4.post0"
pixivpy-async = "~=1.2.14"
aiohttp-socks = "~=0.7.1"
bilibili-api = "9.1.0"
"ruamel.yaml" = "~=0.17.21"
defusedxml = "~=0.7.1"
qrcode = "~=7.3.1"
Pillow = "~=9.0.1"
wcwidth = "~=0.2.5"
aiofile = "~=3.7.4"
databases = {extras = ["sqlite"], version = "^0.5.5"}
psutil = "^5.9.0"
mcstatus = "^9.0.4"

[tool.poetry.dev-dependencies]

[nonebot.plugins]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
